updated code for paid sessions